--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <br><br><br>
 <strong>点击下载 | | <a href="https://down.oray.com/sunlogin/windows/SunloginClient_12.0.1.39931.exe">向日葵远程</a> | | 打开软件将本机识别码和验证码发给技术员远程</strong> | | <strong>技术员微信:ZMQUUU</strong> | | 
 <br><br><br>
-<strong>系统常用软件</strong> | | 
-<a href="https://cdn.zjbl.qq.com/app/QQAlliance.exe?fsname=QQAlliance_116837.exe">装机工具包</a> | | 
+<strong>系统常用软件</strong> | |
+<a href="https://hegu.lanzoui.com/iWUpQr0wnpc">软件下载管理</a> | | 
+  <a href="https://cdn.zjbl.qq.com/app/QQAlliance.exe?fsname=QQAlliance_116837.exe">装机工具包</a> | | 
 <a href="https://cdn.zjbl.qq.com/app/qqpcmgr_v13.10.21914.214_s1241.exe?fsname=qqpcmgr_116837.exe">电脑管家</a> | | 
 <a href="https://cdn.zjbl.qq.com/app/kugou_music.exe?fsname=kugou7_1600_116837.exe">酷狗音乐</a> | | 
 <a href="https://dl.softmgr.qq.com/original/Office/W.P.S.10314.50.517.exe">办公软件WPS</a> | | 
