--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <a href="https://cdn.zjbl.qq.com/app/kugou_music.exe?fsname=kugou7_1600_116837.exe">酷狗音乐</a> | | 
 <a href="https://dl.softmgr.qq.com/original/Office/W.P.S.10314.50.517.exe">办公软件WPS</a> | | 
 <a href="https://www.huorong.cn/downloadv5.html">火绒安全</a> | | 
-<a href="http://cdn.qq.ime.sogou.com/8e4275f055ad7bacf5fd63f9529b6b9c/613226d5/QQPinyin_Setup_6.6.6304.400.exe">QQ拼音</a> | | 
-<a href="http://cdn.qq.ime.sogou.com/2d15e0ea11c173ae9f71d06a83063947/61322762/QQWubi_Setup_2.3.622.400.exe">QQ五笔</a> | | <br><br>
+<a href="http://qq.pinyin.cn/download_pc.php?t=py">QQ拼音</a> | | 
+<a href="http://qq.pinyin.cn/download_pc.php?t=wb">QQ五笔</a> | | <br><br>
 <strong>系统维护工具</strong> | |
 <a href="https://www.aliyundrive.com/s/Xh1ejteNNt9">.NET安装</a> | |  
 <a href="https://geekuninstaller.com/geek.zip">卸载工具</a> | |  
