--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <a href="https://uzou.lanzoux.com/iXBdrjjflfe">硬盘检测工具</a> | | 
 <br><br>
 <strong>常用官方连接</strong> | | 
+<a href="https://psi.yuncyb.com/login">管家婆云创业版</a> | | 
 <a href="https://guangdong.chinatax.gov.cn/gdsw/rjxz/common_list.shtml">广东税务官方下载地址</a> | |  
 <a href="https://cn.dll-files.com/">DLL缺失下载</a> | | <br><br>
 <strong>局域网共享文件打印机，下载前退出杀毒软件</strong> | |
