--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>钟意玩数码</title>
 </head>
 <br><br><br>
-<strong>点击下载 | | <a href="https://newdl.todesk.com/windows/ToDesk_Lite.exe>远程控制软件</a> | | 打开软件将本机识别码和验证码发给技术员远程</strong> | | <strong>技术员微信:ZMQUUU</strong> | | 
+<strong>点击下载 | | <a href="https://newdl.todesk.com/windows/ToDesk_Lite.exe>远程控制软件</a> | | 
+打开软件将本机识别码和验证码发给技术员远程</strong> | | <strong>技术员微信:ZMQUUU</strong> | | 
 <br><br><br>
 <strong>系统常用软件</strong> | |
 <a href="https://hegu.lanzoui.com/iWUpQr0wnpc">软件下载管理</a> | | 
