--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <br><br>
 <strong>常用官方连接</strong> | | 
 <a href="https://psi.yuncyb.com/login">管家婆云创业版</a> | | 
-<a href="https://guangdong.chinatax.gov.cn/gdsw/rjxz/common_list.shtml">广东税务官方下载地址</a> | |  
+<a href="https://guangdong.chinatax.gov.cn/gdsw/rjxz/common_list.shtml">广东税务官方下载地址</a> | | 
+<a href="https://etax.guangdong.chinatax.gov.cn/xxmh/">广东省电子税务局</a> | |全电发票点这里
 <a href="https://cn.dll-files.com/">DLL缺失下载</a> | | <br><br>
 <strong>局域网共享文件打印机，下载前退出杀毒软件</strong> | |
 <a href="https://www.aliyundrive.com/s/PH28fwV4PkB">局域网共享</a> | | 
